--- a/notifications.html
+++ b/notifications.html
@@ -197,6 +197,61 @@
         background-color: #9ca3af;
         cursor: not-allowed;
       }
+
+      /* Loading Spinner Styles */
+      .loading-spinner {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 60px 20px;
+        gap: 20px;
+      }
+
+      .spinner {
+        width: 50px;
+        height: 50px;
+        border: 4px solid rgba(217, 70, 239, 0.2);
+        border-top: 4px solid #d946ef;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
+      .loading-text {
+        color: #d946ef;
+        font-size: 16px;
+        font-weight: bold;
+      }
+
+      body.dark .loading-text {
+        color: #e879f9;
+      }
+
+      .no-data {
+        text-align: center;
+        padding: 60px 20px;
+        color: #999;
+        font-size: 16px;
+      }
+
+      body.dark .no-data {
+        color: #666;
+      }
+
+      .no-data i {
+        font-size: 48px;
+        margin-bottom: 15px;
+        opacity: 0.5;
+      }
     </style>
   </head>
 
@@ -299,7 +354,12 @@
             />
           </div>
 
-          <div id="notificationsList"></div>
+          <div id="notificationsList">
+            <div class="loading-spinner">
+              <div class="spinner"></div>
+              <div class="loading-text">جاري تحميل التنبيهات...</div>
+            </div>
+          </div>
         </div>
 
         <footer>© 2025 Smile Clinic</footer>
@@ -314,6 +374,8 @@
 
       let allBookings = [];
       let filteredBookings = [];
+      let isLoading = false;
+      let dataFetched = false;
 
       // Login
       async function login() {
@@ -354,8 +416,36 @@
         setInterval(loadNotifications, 30000);
       }
 
-      // Load notifications
+      // Show loading spinner
+      function showLoading() {
+        const container = document.getElementById("notificationsList");
+        container.innerHTML = `
+      <div class="loading-spinner">
+        <div class="spinner"></div>
+        <div class="loading-text">جاري تحميل التنبيهات...</div>
+      </div>
+    `;
+      }
+
+      // Show no data message
+      function showNoData() {
+        const container = document.getElementById("notificationsList");
+        container.innerHTML = `
+      <div class="no-data">
+        <div><i class="fa-solid fa-inbox"></i></div>
+        <div>لا توجد تنبيهات متاحة</div>
+      </div>
+    `;
+      }
+
+      // Load notifications (with correct loading order)
       async function loadNotifications() {
+        if (isLoading) return;
+
+        isLoading = true;
+        dataFetched = false;
+        showLoading();
+
         try {
           const res = await fetch("/api/bookings");
           if (!res.ok) throw new Error("Failed to fetch bookings");
@@ -364,55 +454,62 @@
           allBookings = rawData.slice(1).reverse();
           filteredBookings = [...allBookings];
 
+          dataFetched = true;
+          isLoading = false;
+
           renderNotifications();
         } catch (error) {
           console.error("❌ Error loading notifications:", error);
+          isLoading = false;
+          dataFetched = true;
+          showNoData();
         }
       }
 
-      // Render notifications
+      // Render notifications (with loading + no-data handling)
       function renderNotifications() {
         const container = document.getElementById("notificationsList");
 
+        if (isLoading && !dataFetched) {
+          showLoading();
+          return;
+        }
+
+        if (dataFetched && filteredBookings.length === 0) {
+          showNoData();
+          return;
+        }
+
         container.innerHTML = filteredBookings
-          .map((booking) => {
-            const timeAgo = getTimeAgo(booking.time);
-            return `
-        <div class="notification-item">
-          <div class="notification-icon">
-            <i class="fa-solid fa-user-plus"></i>
-          </div>
-          <div class="notification-content">
-            <div class="notification-name">${booking.name || "غير محدد"}</div>
-            <div class="notification-details">
-              <i class="fa-solid fa-phone"></i> ${booking.phone || "غير محدد"}
+          .map(
+            (b) => `
+          <div class="notification-item">
+            <div class="notification-icon"><i class="fa-solid fa-user-plus"></i></div>
+            <div class="notification-content">
+              <div class="notification-name">${b.name || "غير محدد"}</div>
+              <div class="notification-details"><i class="fa-solid fa-phone"></i> ${
+                b.phone || "غير محدد"
+              }</div>
+              <div class="notification-details"><i class="fa-solid fa-stethoscope"></i> ${
+                b.service || "غير محدد"
+              }</div>
+              <div class="notification-details"><i class="fa-solid fa-calendar"></i> ${
+                b.appointment || "غير محدد"
+              }</div>
+              <div class="notification-time"><i class="fa-solid fa-clock"></i> ${getTimeAgo(
+                b.time
+              )}</div>
             </div>
-            <div class="notification-details">
-              <i class="fa-solid fa-stethoscope"></i> ${
-                booking.service || "غير محدد"
-              }
-            </div>
-            <div class="notification-details">
-              <i class="fa-solid fa-calendar"></i> ${
-                booking.appointment || "غير محدد"
-              }
-            </div>
-            <div class="notification-time">
-              <i class="fa-solid fa-clock"></i> ${timeAgo}
-            </div>
-          </div>
-        </div>`;
-          })
+          </div>`
+          )
           .join("");
       }
 
       // Get time ago
       function getTimeAgo(time) {
         if (!time) return "غير محدد";
-
         const now = new Date();
         const bookingDate = new Date(time);
-
         if (isNaN(bookingDate.getTime())) return "غير محدد";
 
         const diffMs = now - bookingDate;
@@ -424,7 +521,6 @@
         if (diffMins < 60) return `منذ ${diffMins} دقيقة`;
         if (diffHours < 24) return `منذ ${diffHours} ساعة`;
         if (diffDays < 7) return `منذ ${diffDays} يوم`;
-
         return bookingDate.toLocaleDateString("ar-EG");
       }
 
@@ -455,29 +551,26 @@
 
         filteredBookings = allBookings.filter((booking) => {
           if (!booking.time) return false;
-
           const date = new Date(booking.time);
           if (isNaN(date.getTime())) return false;
 
-          if (period === "day") {
+          if (period === "day")
             return (
               date.getFullYear() === now.getFullYear() &&
               date.getMonth() === now.getMonth() &&
               date.getDate() === now.getDate()
             );
-          }
 
           if (period === "week") {
             const weekAgo = new Date(now.getTime() - 7 * 24 * 60 * 60 * 1000);
             return date >= weekAgo && date <= now;
           }
 
-          if (period === "month") {
+          if (period === "month")
             return (
               date.getFullYear() === now.getFullYear() &&
               date.getMonth() === now.getMonth()
             );
-          }
 
           return true;
         });
@@ -485,25 +578,27 @@
         renderNotifications();
       }
 
-      // Reset time filter
       function resetTimeFilter(btn) {
         filteredBookings = [...allBookings];
         renderNotifications();
         setActiveButton(btn);
       }
 
-      // Set active button
       function setActiveButton(selectedBtn) {
         document
           .querySelectorAll(".filter-btn")
           .forEach((b) => b.classList.remove("active"));
-        if (!selectedBtn.classList.contains("reset")) {
+        if (!selectedBtn.classList.contains("reset"))
           selectedBtn.classList.add("active");
-        }
       }
 
-      // Download CSV
+      // CSV Download
       document.getElementById("downloadBtn").addEventListener("click", () => {
+        if (filteredBookings.length === 0) {
+          alert("لا توجد بيانات للتنزيل");
+          return;
+        }
+
         const headers = ["الاسم", "الهاتف", "الخدمة", "الموعد", "الوقت"];
         const rows = filteredBookings.map((b) => [
           `"${(b.name || "-").replace(/"/g, '""')}"`,
@@ -519,18 +614,13 @@
         const blob = new Blob(["\uFEFF" + csv], {
           type: "text/csv;charset=utf-8;",
         });
-
         const link = document.createElement("a");
         const url = URL.createObjectURL(blob);
-        link.setAttribute("href", url);
-        link.setAttribute(
-          "download",
-          `notifications_${new Date().toISOString().split("T")[0]}.csv`
-        );
-        link.style.display = "none";
-        document.body.appendChild(link);
+        link.href = url;
+        link.download = `notifications_${
+          new Date().toISOString().split("T")[0]
+        }.csv`;
         link.click();
-        document.body.removeChild(link);
         URL.revokeObjectURL(url);
       });
 
@@ -549,14 +639,11 @@
         }
       });
 
-      // Load theme preference
       if (localStorage.getItem("clinic_theme") === "dark") {
         document.body.classList.add("dark");
-        const icon = themeToggle.querySelector("i");
-        icon.classList.replace("fa-moon", "fa-sun");
+        themeToggle.querySelector("i").classList.replace("fa-moon", "fa-sun");
       }
 
-      // Menu toggle
       document.getElementById("menuToggle").addEventListener("click", () => {
         document.getElementById("sidebar").classList.toggle("active");
       });
