--- a/notifications.html
+++ b/notifications.html
@@ -11,6 +11,7 @@
     />
     <link rel="stylesheet" href="./dashboard.css" />
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
     <style>
       .notification-item {
