--- a/booking.html
+++ b/booking.html
@@ -62,9 +62,9 @@
         margin-bottom: 10px;
       }
 
-      .status-saved {
-        color: green;
+      .save-indicator {
         font-size: 12px;
+        color: green;
         display: none;
         margin-right: 5px;
       }
@@ -173,7 +173,7 @@
     </div>
 
     <script>
-      // ======= SUPABASE CONFIG =======
+      // ======= SUPABASE LOGIN LOGIC =======
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
@@ -184,18 +184,31 @@
       const q = (s) => document.querySelector(s);
 
       async function load() {
-        const { data, error } = await supabase.from("bookings").select("*");
-        if (error) {
-          console.error("❌ Error loading bookings:", error);
-          return;
-        }
+        const res = await fetch("/api/bookings");
+        allData = await res.json();
 
-        allData = data.map((b) => ({
+        // Add default status if missing
+        allData = allData.map((b) => ({
           ...b,
           status: b.status || "Still",
         }));
 
         renderTable(allData);
+      }
+
+      async function updateStatus(id, newStatus) {
+        try {
+          const { error } = await supabase
+            .from("bookings")
+            .update({ status: newStatus })
+            .eq("id", id);
+
+          if (error) {
+            console.error("Error updating status:", error);
+          }
+        } catch (e) {
+          console.error("Network error updating status:", e);
+        }
       }
 
       function renderTable(d) {
@@ -211,8 +224,8 @@
             <td>${b.appointment || "-"}</td>
             <td>${b.time || "-"}</td>
             <td>
-              <div style="display:flex; align-items:center;">
-                <span class="status-saved" id="saved-${idx}">✔</span>
+              <div style="display:flex;align-items:center;gap:5px;">
+                <span class="save-indicator" id="saved-${idx}">✔</span>
                 <select class="status-dropdown" data-index="${idx}" data-id="${
             b.id
           }">
@@ -232,28 +245,20 @@
           tb.appendChild(r);
         });
 
-        // Attach change event for saving status
+        // Attach change event
         document.querySelectorAll(".status-dropdown").forEach((sel) => {
           sel.addEventListener("change", async (e) => {
             const index = e.target.dataset.index;
-            const bookingId = e.target.dataset.id;
+            const id = e.target.dataset.id;
             const newStatus = e.target.value;
+
             allData[index].status = newStatus;
+            await updateStatus(id, newStatus);
 
-            // Save to Supabase
-            const { error } = await supabase
-              .from("bookings")
-              .update({ status: newStatus })
-              .eq("id", bookingId);
-
-            if (error) {
-              console.error("Error updating status:", error);
-              alert("❌ فشل حفظ الحالة!");
-            } else {
-              const check = document.getElementById(`saved-${index}`);
-              check.style.display = "inline";
-              setTimeout(() => (check.style.display = "none"), 1500);
-            }
+            // Show quick save check mark
+            const indicator = document.getElementById(`saved-${index}`);
+            indicator.style.display = "inline";
+            setTimeout(() => (indicator.style.display = "none"), 1500);
 
             applyFilter();
           });
